# Colby-Now-Merchandise

./: .coverage  .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: new-issue-template.md
.github/workflows/: lint.yml
app/: __init__.py  auth.py  main.py  models.py  recommendations.py  search_utils.py
app/api/: __init__.py  auth_routes.py  chat_routes.py  items_routes.py  users_routes.py
app/services/: auth_service.py  storage_service.py
app/static/css/: landing.css  style.css
app/static/js/: favorites.js
app/templates/: _navbar.html  _order_card.html  buy_item.html  chat.html  contact_us.html  edit_item.html  favorites.html  forgot_password.html  home.html  inbox.html  item_details.html  landing.html  my_listings.html  my_orders.html  order_page.html  payment.html  post_new_item.html  profile.html  sellers_details.html  signup.html
app/utils/: search_utils.py
migrations/versions/: 92f614413327_enforce_required_item_fields.py
scripts/: backfill_embeddings.py
src/backend/: main.py
src/frontend/templates/: home.html
tests/: conftest.py  test_auth.py  test_chat_extra.py  test_main_and_orders.py  test_main_extra.py  test_search_utils.py  test_validators_and_models.py
