[project]
name = "mule-mart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.2",
    "black==25.12.0",
    "blinker==1.9.0",
    "boto3==1.42.12",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "flask==3.1.2",
    "flask-dance==7.1.0",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "numpy>=2.4.1",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "psycopg2-binary==2.9.11",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv==1.2.1",
    "pytz>=2025.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy==2.0.44",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "urlobject==3.0.0",
    "werkzeug==3.1.3",
]
